-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13, 14
-
Component/s: hotspot
-
b20
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246068 | 13.0.4 | Claes Redestad | P4 | Resolved | Fixed | b03 |
| JDK-8233532 | 11.0.7-oracle | Claes Redestad | P4 | Resolved | Fixed | b01 |
| JDK-8237333 | 11.0.7 | Claes Redestad | P4 | Resolved | Fixed | b01 |
| JDK-8297883 | openjdk8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8359514 | shenandoah8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
This can take significant background resources, mostly since os::available_memory is called every iteration of each compiler thread's main loop to help determine if the system should add more compiler threads.
There are a couple of possible solutions:
- add a grace time to how often OSContainer::memory_limit_in_bytes actually reads the /proc configuration
- refactor compiler thread loop to make that possibly_add_compiler_threads a periodic task rather than something that each and every compiler thread does between every compilation
- backported by
-
JDK-8233532 Linux os::available_memory re-reads cgroup configuration on every invocation
-
- Resolved
-
-
JDK-8237333 Linux os::available_memory re-reads cgroup configuration on every invocation
-
- Resolved
-
-
JDK-8246068 Linux os::available_memory re-reads cgroup configuration on every invocation
-
- Resolved
-
-
JDK-8297883 Linux os::available_memory re-reads cgroup configuration on every invocation
-
- Resolved
-
-
JDK-8359514 Linux os::available_memory re-reads cgroup configuration on every invocation
-
- Resolved
-
- relates to
-
JDK-8227006 [linux] Runtime.availableProcessors execution time increased by factor of 100
-
- Resolved
-
-
JDK-8296125 Add a command line option to set a refresh rate of the OS cached metrics in Linux
-
- Closed
-