8232207: Linux os::available_memory re-reads cgroup configuration on every invocation

Reviewed-by: bobv, sgehwolf